--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "builds": [{
-    "src": "Project101.wsgi.py",
+    "src": "Project101/wsgi.py",
     "use": "@vercel/python",
     "config": {
       "maxLambdaSize": "15mb", "runtime": "python3.9"
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "Project101.wsgi.py"
+      "dest": "Project101/wsgi.py"
     }
   ]
 }
